<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="toCurrencyObject"
            type="com.maxab.currencyconverter.model.CurrencyEntity" />

        <variable
            name="fromCurrencyObject"
            type="com.maxab.currencyconverter.model.CurrencyEntity" />

        <variable
            name="currencyConverterListener"
            type="com.maxab.currencyconverter.ui.currency_converter.CurrencyConverterViewModel" />
        <variable
            name="dataMode"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Background -->
        <View
            android:id="@+id/view_currency_converter_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_home_header"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!-- action bar container -->
        <RelativeLayout
            android:id="@+id/rl_currency_converter_container"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_currency_converter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/convergence"
                android:text="@string/currency_converter_title"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp18" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_currency_converter_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:onClick="@{()->currencyConverterListener.onCloseClicked()}"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp8w"
                android:padding="@dimen/dp8w"
                android:src="@drawable/ic_close" />

        </RelativeLayout>
        <!-- from container -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_currency_converter_from_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp16w"
            android:layout_marginBottom="@dimen/dp8w"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/dp8w"
            app:cardElevation="@dimen/dp4w"
            app:layout_constraintEnd_toStartOf="@id/iv_currency_converter_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_currency_converter_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp8w">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp40w"
                    android:layout_gravity="center"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:text="@string/currency_converter_from_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp14"
                    app:text="@{fromCurrencyObject.currencyName}" />

                <TextView
                    android:id="@+id/tv_from_currency_picker_symbol"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40h"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/currency_picker_base_currency_symbol"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp30"
                    app:text="@{fromCurrencyObject.currencySymbol}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp30h"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/currency_converter_from_amount"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp14" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!-- Arrow -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_currency_converter_arrow"
            android:layout_width="@dimen/dp45w"
            android:layout_height="@dimen/dp45h"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginTop="@dimen/dp50w"
            android:layout_marginEnd="@dimen/dp8w"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintEnd_toStartOf="@id/cv_currency_converter_to_container"
            app:layout_constraintStart_toEndOf="@id/cv_currency_converter_from_container"
            app:layout_constraintTop_toBottomOf="@+id/rl_currency_converter_container" />
        <!-- To container -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_currency_converter_to_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp16w"
            android:layout_marginBottom="@dimen/dp8w"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/dp8w"
            app:cardElevation="@dimen/dp4w"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_currency_converter_arrow"
            app:layout_constraintTop_toBottomOf="@+id/rl_currency_converter_container">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp8w">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp40h"
                    android:layout_gravity="center"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:text="@string/currency_converter_to_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp14"
                    app:text="@{toCurrencyObject.currencyName}" />

                <TextView
                    android:id="@+id/tv_to_currency_picker_symbol"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40h"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/currency_picker_base_currency_symbol"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp30"
                    app:text="@{toCurrencyObject.currencySymbol}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp30h"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/currency_converter_from_amount"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp14"
                    app:text="@{String.valueOf(toCurrencyObject.currencyRate)}" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <!-- Amount -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_currency_converter_amount_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16w"
            app:cardCornerRadius="@dimen/dp8w"
            app:cardElevation="@dimen/dp4w"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_currency_converter_from_container">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_currency_converter_amount_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/dp8w"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/currency_converter_amount_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp13" />


                <TextView
                    android:id="@+id/iv_currency_converter_amount_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_currency_converter_amount_title"
                    android:layout_marginStart="@dimen/dp8w"
                    android:text="@string/currency_converter_symbol"
                    app:text="@{fromCurrencyObject.currencySymbol}"
                    android:textSize="@dimen/sp13" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_currency_converter_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_currency_converter_amount_title"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@+id/iv_currency_converter_amount_symbol"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/montserrat_bold"
                    android:hint="@string/currency_converter_amount_value"
                    android:inputType="numberDecimal"
                    android:maxWidth="@dimen/dp150w"
                    android:maxLines="1"
                    android:padding="@dimen/dp8w"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorLightGrey"
                    android:textSize="@dimen/sp23" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <!-- Convert Button -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_currency_converter_convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp8w"
            android:layout_marginEnd="@dimen/dp16w"
            android:onClick="@{()->currencyConverterListener.onConvertRateClicked(fromCurrencyObject,toCurrencyObject,etCurrencyConverterAmount,dataMode)}"
            app:cardCornerRadius="@dimen/dp30h"
            app:cardElevation="@dimen/dp4w"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_currency_converter_amount_container">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="@dimen/dp45w"
                android:layout_height="@dimen/dp45h"
                android:background="@color/colorOnPrimary"
                android:scaleType="fitXY"
                android:src="@drawable/ic_convert" />

        </com.google.android.material.card.MaterialCardView>
        <!-- Result -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_currency_converter_result_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60h"
            android:layout_margin="@dimen/dp16w"
            app:cardCornerRadius="@dimen/dp8w"
            app:cardElevation="@dimen/dp4w"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_currency_converter_convert">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/convergence"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/dp16w"
                    android:layout_marginTop="@dimen/dp16w"
                    android:layout_marginBottom="@dimen/dp16w"
                    android:text="@string/currency_converter_amount_with_sub"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp19" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/convergence"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dp16w"
                    android:layout_marginBottom="@dimen/dp16w"
                    app:text="@{String.valueOf(toCurrencyObject.currencyRate)}"
                    android:text="@string/currency_converter_from_amount"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp19" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/convergence"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/dp16w"
                    android:layout_marginTop="@dimen/dp16w"
                    android:layout_marginBottom="@dimen/dp16w"
                    android:text="@string/currency_converter_equal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp19" />

                <TextView
                    android:id="@+id/tv_currency_converter_result"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/dp16w"
                    android:layout_marginTop="@dimen/dp16w"
                    android:layout_marginBottom="@dimen/dp16w"
                    android:text="@string/currency_converter_result"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp20" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>