<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="currencyPickerListener"
            type="com.maxab.currencyconverter.ui.currency_picker.CurrencyPickerViewModel" />

        <variable
            name="currencyObject"
            type="com.maxab.currencyconverter.model.CurrencyEntity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_login_top_cloud"
            android:layout_width="@dimen/dp150w"
            android:layout_height="@dimen/dp150h"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_wave_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_login_bottom_cloud"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp200h"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:scaleType="fitStart"
            android:src="@drawable/ic_wave_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <RelativeLayout
            android:id="@+id/rl_currency_picker_toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_currency_picker_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/convergence"
                android:text="@string/currency_picker_title"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp18" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_currency_picker_switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp16w"
                android:layout_marginEnd="@dimen/dp16w"
                android:layout_toEndOf="@+id/tv_currency_picker_title" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:onClick="@{()->currencyPickerListener.onFromCurrencyPickerClicked()}"
            android:id="@+id/cv_currency_picker_base_currency"
            android:layout_width="@dimen/dp130w"
            android:layout_height="@dimen/dp130h"
            android:layout_margin="@dimen/dp16w"
            app:cardCornerRadius="@dimen/dp8w"
            app:cardElevation="@dimen/dp4w"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_currency_picker_toolbar_container">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp8w">

                <TextView
                    android:id="@+id/tv_from_currency_picker_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center"
                    android:text="@string/currency_picker_base_currency_name"
                    app:text="@{currencyObject.currencyName}"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp14" />

                <TextView
                    android:id="@+id/tv_from_currency_picker_symbol"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/currency_picker_base_currency_symbol"
                    app:text="@{currencyObject.currencySymbol}"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp40" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_to_currency_picker_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp16w"
            tools:listitem="@layout/item_to_currency"
            app:layout_constraintTop_toBottomOf="@+id/cv_currency_picker_base_currency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>